# context-engineering-turso

./: .cursorrules  .gitignore  ANALISE_REDUNDANCIA_MCP.md  CLAUDE.md  COMO_ATIVAR_MCP_SERVERS.md  CONFIGURACAO_FINAL_GRAPHITI_TURSO.md  DESCOBERTA_MCP_TURSO_FUNCIONA.md  FINAL_SUMMARY.md  GRAPHITI_TURSO_MELHORIAS.md  GRAPHITI_TURSO_SOLUCAO_COMPLETA.md  MIGRATION_TO_SIMPLIFIED.md  PRP_FRAMEWORK_COMPREHENSIVE_GUIDE.md  README.md  README_A2A.md  REMOCAO_MCP_TURSO.md  RESUMO_EXECUTIVO_GRAPHITI_TURSO.md  SOLUCAO_FINAL_MCP_TURSO.md  SPARC_JOURNEY_COMPLETE.md  TURSO_SIMPLIFIED_ARCHITECTURE.md  a2a-config.json  a2a-server.js  agentes-midia-paga-melhorias.md  context-memory.db  create_table.sql  integration-analysis-report.md  jest.config.js  mcp_turso_cursor_diagnostic.md  package-lock.json  package.json  requirements_sentry.txt  setup-mcp.sh  sparc-solution-summary.md  sparc-specification.yaml  start-all-mcp.sh  start.sh  sync_report_20250802_211058.txt  sync_report_20250802_212151.txt  sync_report_20250802_213131.txt  test-mcp-configs.sh  test-mcp-turso-auto.sh  (+2 more)
prp-agent/: .env.sentry  CLAUDE.md  COMO_GERAR_PRP_VIA_AGENT.md  PRP_TURSO_SPECIALIST_SUMMARY.md  README.md  README_TEMPLATE.md  STARTUP_SCRIPTS.md  __init__.py  agent_with_mcp.py  cli.py  configure_openai.py  create_and_list_prps.py  criar_projeto_via_mcp.py  cursor_final.py  demo_mcp_comparison.py  demo_resposta_correta.py  demo_turso_specialist_prp.py  generate_prp_simple.py  list_prps.py  logs.sh  main.py  main_ai_agents.py  main_ai_agents_custom.py  main_ai_agents_real.py  main_ai_monitoring.py  main_simple.py  (+20 more)
(+529 files in other folders)
